# Food-order-deliver

./: .gitignore  analytics.py  app.py  commandes.py  email_sender.py  preparation.py  pyproject.toml  requirements.txt  stockage.py
data/: commands.db
src/: utils.py
src/classes/: client.py  commande.py  sandwich.py
tests/: test_client.py  test_commande.py  test_sandwich.py  test_stockae.py
